--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-license",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Get SPDX license text.",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "license",
     "spdx",
     "text",
+    "console",
     "merferry"
   ],
   "author": "wolfram77@gmail.com",
