--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "extra-license",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Get SPDX license text.",
   "main": "index.js",
   "scripts": {
+    "install": "node install",
     "test": "exit"
+  },
+  "preferGlobal": true,
+  "bin": {
+    "elicense": "index.cmd"
   },
   "repository": {
     "type": "git",
